--- a/index.html
+++ b/index.html
@@ -1,148 +1,9 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>복사 기능</title>
-    <style>
-        .copy-button {
-            margin: 5px;
-        }
-        .message {
-            color: RED;
-            font-weight: bold;
-            margin-top: 20px;
-        }
-    </style>
+ test
 </head>
 <body>
-    <h1>회원 정보</h1>
-    <div id="member-info">
-        <div id="bank-info-4">
-            1일차-/2일차-/3일차-/4일차-/5일차-<br>
-            <br>
-            [이용 경고]<br>
-            <br>
-            [회원 정보 변경]<br>
-            <br>
-            [이벤트 참여]<br>
-            <br>
-            [기타 특이사항]<br>
-            <br>
-            ========================지인 추천 이벤트==========================<br>
-            <br>
-            지인 닉네임 <br>
-&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-            <button class="copy-button" onclick="copyBankInfo('bank-info-4')" style="background-color: #FF5050; color: white;">회원메모 복사</button>
-            <br>
-            <div class="message" id="message-4"></div>
-        </div>
-    </div>
-============================
-    <h1>은행 정보</h1>
-    
-
-    <div id="bank-info-1">
-        ※ 전용계좌 발급일 : <span id="current-date-1"></span><br>
-        ※ 은행명 : 신한은행<br>
-        ※ 예금주 : 이희인<br>
-        ※ 계좌번호 : 020-550-8859-98 <br>
-        ※ 등록된 환전 계좌에서만 이체 가능<br>
-
-&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-<button class="copy-button" onclick="copyBankInfo('bank-info-1')" style="background-color: #FF6633; color: white;">실드페이 복사하기</button>
-         <br>
-        <div class="message" id="message-1"></div>
-    </div>
-
-============================
-
-
-    <div id="bank-info-2">
-        ※ 전용계좌 발급일 : <span id="current-date-2"></span><br>
-        ※ 은행명 : 부산은행<br>
-        ※ 예금주 : 박홍석<br>
-        ※ 계좌번호 : 5252-8080-79<br>
-        ※ 등록된 환전 계좌에서만 이체 가능<br>
-
-&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;        
-<button class="copy-button" onclick="copyBankInfo('bank-info-2')" style="background-color: #1478FF; color: white;">진페이 복사하기</button>
-        <br>
-        <div class="message" id="message-2"></div>
-       </div>
-
-============================
-
-    <div id="bank-info-3">
-        ※ 전용계좌 발급일 : <span id="current-date-3"></span><br>
-        ※ 은행명 : 농협은행<br>
-        ※ 예금주 : 이영석<br>
-        ※ 계좌번호 : 356-8826-4549-79<br>
-        ※ 등록된 환전 계좌에서만 이체 가능<br>
-
-&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;        
-<button class="copy-button" onclick="copyBankInfo('bank-info-3')" style="background-color: #4CAF50; color: white;">스피드 복사하기</button>
-         <br>
-        <div class="message" id="message-3"></div>
-    </div>
-
-============================
-    <div id="bank-info-5">
-        ※ 전용계좌 발급일 : <span id="current-date-4"></span><br>
-        ※ 은행명 : 신협은행<br>
-        ※ 예금주 : 예금주명<br>
-        ※ 계좌번호 :<br>
-        ※ 등록된 환전 계좌에서만 이체 가능<br>
-
-&nbsp;&nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;        
-<button class="copy-button" onclick="copyBankInfo('bank-info-5')" style="background-color: #4CAF50; color: white;">신협은행 정보 복사</button>
-        <div class="message" id="message-4"></div>
-    </div>
-
-    <script>
-        // 현재 날짜를 가져와서 표시하는 함수
-        function setCurrentDate() {
-            const today = new Date();
-            const options = { year: 'numeric', month: '2-digit', day: '2-digit' };
-            const formattedDate = today.toLocaleDateString('ko-KR', options);
-
-            document.getElementById('current-date-1').innerText = formattedDate;
-            document.getElementById('current-date-2').innerText = formattedDate;
-            document.getElementById('current-date-3').innerText = formattedDate;
-            document.getElementById('current-date-4').innerText = formattedDate;
-        }
-
-        // 은행 정보 복사 함수
-        function copyBankInfo(bankInfoId) {
-            const bankInfoElement = document.getElementById(bankInfoId);
-            const bankInfo = bankInfoElement.innerText
-                .replace(/회원메모 복사/g, '') // 버튼 텍스트를 제거
-		.replace(/실드페이 복사하기/g, '') // 버튼 텍스트를 제거
-		.replace(/진페이 복사하기/g, '') // 버튼 텍스트를 제거
-		.replace(/스피드 복사하기/g, '') // 버튼 텍스트를 제거
-                .replace(/신협은행 정보 복사/g, '') // 버튼 텍스트를 제거
-
-                .trim(); // 앞뒤 공백 제거
-            copyToClipboard(bankInfo);
-            const messageId = 'message-' + bankInfoId.split('-')[2];
-            document.getElementById(messageId).innerText = "복사되었습니다.";
-            setTimeout(() => {
-                document.getElementById(messageId).innerText = "";
-            }, 500); // 0.3초 후에 메시지 사라짐
-        }
-
-        // 클립보드에 텍스트 복사하는 함수
-        function copyToClipboard(text) {
-            const textarea = document.createElement('textarea');
-            textarea.value = text;
-            document.body.appendChild(textarea);
-            textarea.select();
-            document.execCommand('copy');
-            document.body.removeChild(textarea);
-        }
-
-        // 페이지 로드 시 현재 날짜 설정
-        window.onload = setCurrentDate;
-    </script>
+test
 </body>
 </html>
