--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 <img src="https://ifh.cc/g/m8B9TN.jpg">
 </head>
 <body>
-test
+<img src="다운로드-1-3.jpg" usemap="#image-map">
+
+<map name="image-map">
+    <area target="" alt="" title="" href="https://www.youtube.com/watch?v=UO7__Xgzfbo" coords="519,84,742,429" shape="rect">
+    <area target="" alt="" title="" href="https://www.youtube.com/watch?v=UO7__Xgzfbo" coords="138,95,325,383" shape="rect">
+</map>
+
 </body>
 </html>
