--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <img src="https://ifh.cc/g/m8B9TN.jpg">
 </head>
 <body>
-<img src="다운로드-1-3.jpg" usemap="#image-map">
+<img src="https://ifh.cc/g/gBtwMO.jpg" usemap="#image-map">
 
 <map name="image-map">
-    <area target="" alt="" title="" href="https://www.youtube.com/watch?v=UO7__Xgzfbo" coords="519,84,742,429" shape="rect">
-    <area target="" alt="" title="" href="https://www.youtube.com/watch?v=UO7__Xgzfbo" coords="138,95,325,383" shape="rect">
+    <area target="" alt="" title="" href="https://www.youtube.com/watch?v=2UrEbz69Uhk" coords="26,18,288,438" shape="rect">
+    <area target="" alt="" title="" href="https://www.youtube.com/watch?v=ax_dV128RIo&amp;t=35s" coords="424,24,727,441" shape="rect">
 </map>
 
 </body>
