--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <img src="https://ifh.cc/g/gBtwMO.jpg" usemap="#image-map">
 
 <map name="image-map">
-    <area target="" alt="" title="" href="https://www.youtube.com/watch?v=2UrEbz69Uhk" coords="26,18,288,438" shape="rect">
-    <area target="" alt="" title="" href="https://www.youtube.com/watch?v=ax_dV128RIo&amp;t=35s" coords="424,24,727,441" shape="rect">
+    <area target="" alt="" title="" href="https://www.youtube.com/embed/ax_dV128RIo?si=LrdbVsarIJcPYfUm" coords="26,18,288,438" shape="rect">
+    <area target="" alt="" title="" href="https://www.youtube.com/embed/2UrEbz69Uhk?si=YRovgVgy0dEBcbAO" coords="424,24,727,441" shape="rect">
 </map>
 
 </body>
