--- a/index.html
+++ b/index.html
@@ -4,11 +4,19 @@
 <img src="https://ifh.cc/g/m8B9TN.jpg">
 </head>
 <body>
-<img src="https://ifh.cc/g/gBtwMO.jpg" usemap="#image-map">
+
+<img src="https://ifh.cc/g/4T25yd.jpg" usemap="#image-map">
 
 <map name="image-map">
-    <area target="" alt="" title="" href="https://www.youtube.com/embed/ax_dV128RIo?si=LrdbVsarIJcPYfUm" coords="26,18,288,438" shape="rect">
-    <area target="" alt="" title="" href="https://www.youtube.com/embed/2UrEbz69Uhk?si=YRovgVgy0dEBcbAO" coords="424,24,727,441" shape="rect">
+    <area target="_blank" alt="빗썸" title="빗썸" href="https://www.youtube.com/embed/4j3kK-pksdE?si=yiZ5EIs-HPKIDSFt" coords="151,313,72" shape="circle">
+    <area target="_blank" alt="업비트" title="업비트" href="https://www.youtube.com/embed/Ifc5WujCM7Q?si=h0rg_Q7ybCuwh_0C" coords="384,310,74" shape="circle">
+    <area target="_blank" alt="코인게코" title="코인게코" href="https://www.coingecko.com/ko/%EC%BD%94%EC%9D%B8/%ED%8A%B8%EB%A1%A0" coords="617,313,77" shape="circle">
+    <area target="_blank" alt="바이낸스" title="바이낸스" href="https://www.youtube.com/embed/_YQ2mUGdgtU?si=NWTqeTPWlaTRqCoB" coords="145,549,77" shape="circle">
+    <area target="_blank" alt="바이비트" title="바이비트" href="https://www.youtube.com/embed/enoxXhvlYDM?si=PQMNvdZJRHOd-6c4" coords="386,553,83" shape="circle">
+    <area target="_blank" alt="트론링크" title="트론링크" href="https://www.youtube.com/embed/aRYl_IOE1U0?si=Dug4rX_lPpsQUCdo" coords="619,554,83" shape="circle">
+    <area target="_blank" alt="빗썸 전송" title="빗썸 전송" href="https://www.youtube.com/embed/_EMeowmoPr0?si=7xAQmWKbVCwjRPm1" coords="155,826,64" shape="circle">
+    <area target="_blank" alt="바이낸스 전송" title="바이낸스 전송" href="https://www.youtube.com/embed/aRYl_IOE1U0?si=N3OnF3U_5befKuUs" coords="383,825,66" shape="circle">
+    <area target="_blank" alt="트론링크 전송" title="트론링크 전송" href="https://www.youtube.com/embed/LGXdNoVUioU?si=DhJMWCvD6_LdHcAt" coords="612,823,66" shape="circle">
 </map>
 
 </body>
