--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 
-<img src="https://ifh.cc/g/4T25yd.jpg" usemap="#image-map" width="300">
-
+<img src="https://ifh.cc/g/4T25yd.jpg" usemap="#image-map" style="width: 500px;">
+    
 <map name="image-map">
     <area target="_blank" alt="빗썸" title="빗썸" href="https://www.youtube.com/embed/4j3kK-pksdE?si=yiZ5EIs-HPKIDSFt" coords="151,313,72" shape="circle">
     <area target="_blank" alt="업비트" title="업비트" href="https://www.youtube.com/embed/Ifc5WujCM7Q?si=h0rg_Q7ybCuwh_0C" coords="384,310,74" shape="circle">
