--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
 <img src="https://ifh.cc/g/QLNSVS.jpg" style="max-width: 100%; height: auto;" usemap="#image-map">
     
 <map name="image-map">
-    <area target="" alt="빗썸" title="빗썸" href="https://www.youtube.com/embed/4j3kK-pksdE?si=yiZ5EIs-HPKIDSFt" coords="129,314,93" shape="circle">
-    <area target="" alt="업비트" title="업비트" href="https://www.youtube.com/embed/Ifc5WujCM7Q?si=h0rg_Q7ybCuwh_0C" coords="385,317,93" shape="circle">
-    <area target="" alt="코인게코" title="코인게코" href="https://www.coingecko.com/ko/%EC%BD%94%EC%9D%B8/%ED%8A%B8%EB%A1%A0" coords="639,323,98" shape="circle">
-    <area target="" alt="바이낸스" title="바이낸스" href="https://www.youtube.com/embed/_YQ2mUGdgtU?si=NWTqeTPWlaTRqCoB" coords="137,575,94" shape="circle">
-    <area target="" alt="바이비트" title="바이비트" href="https://www.youtube.com/embed/enoxXhvlYDM?si=PQMNvdZJRHOd-6c4" coords="384,575,89" shape="circle">
-    <area target="" alt="트러스트 월렛" title="트러스트 월렛" href="https://www.youtube.com/embed/tUnS4yDsR94?si=55mdbi1U79wx8zYP" coords="634,581,93" shape="circle">
-    <area target="" alt="빗썸 전송" title="빗썸 전송" href="https://www.youtube.com/embed/_EMeowmoPr0?si=7xAQmWKbVCwjRPm1" coords="148,884,94" shape="circle">
-    <area target="" alt="바이낸스에서 트러스트 전송" title="바이낸스에서 트러스트 전송" href="https://www.youtube.com/embed/DE2Su1K3fgY?si=zcu1q7GLRQjO5oJh" coords="386,877,91" shape="circle">
-    <area target="" alt="트러스트 월렛" title="트러스트 월렛" href="https://www.youtube.com/embed/8S5qn1EOZpY?si=ImxuTVAiaP0q8bH3&amp;amp;start=114" coords="635,879,97" shape="circle">
+    <area target="_blank" alt="빗썸" title="빗썸" href="https://www.youtube.com/embed/4j3kK-pksdE?si=yiZ5EIs-HPKIDSFt" coords="129,314,93" shape="circle">
+    <area target="_blank" alt="업비트" title="업비트" href="https://www.youtube.com/embed/Ifc5WujCM7Q?si=h0rg_Q7ybCuwh_0C" coords="385,317,93" shape="circle">
+    <area target="_blank" alt="코인게코" title="코인게코" href="https://www.coingecko.com/ko/%EC%BD%94%EC%9D%B8/%ED%8A%B8%EB%A1%A0" coords="639,323,98" shape="circle">
+    <area target="_blank" alt="바이낸스" title="바이낸스" href="https://www.youtube.com/embed/_YQ2mUGdgtU?si=NWTqeTPWlaTRqCoB" coords="137,575,94" shape="circle">
+    <area target="_blank" alt="바이비트" title="바이비트" href="https://www.youtube.com/embed/enoxXhvlYDM?si=PQMNvdZJRHOd-6c4" coords="384,575,89" shape="circle">
+    <area target="_blank" alt="트러스트 월렛" title="트러스트 월렛" href="https://www.youtube.com/embed/tUnS4yDsR94?si=55mdbi1U79wx8zYP" coords="634,581,93" shape="circle">
+    <area target="_blank" alt="빗썸 전송" title="빗썸 전송" href="https://www.youtube.com/embed/_EMeowmoPr0?si=7xAQmWKbVCwjRPm1" coords="148,884,94" shape="circle">
+    <area target="_blank" alt="바이낸스에서 트러스트 전송" title="바이낸스에서 트러스트 전송" href="https://www.youtube.com/embed/DE2Su1K3fgY?si=zcu1q7GLRQjO5oJh" coords="386,877,91" shape="circle">
+    <area target="_blank" alt="트러스트 월렛" title="트러스트 월렛" href="https://www.youtube.com/embed/8S5qn1EOZpY?si=ImxuTVAiaP0q8bH3&amp;amp;start=114" coords="635,879,97" shape="circle">
 </map>
 
 </body>
