--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     
-<img src="https://ifh.cc/g/QLNSVS.jpg" style="max-width: 100%; height: auto;" usemap="#image-map">
+<img src="https://ifh.cc/g/QLNSVS.jpg" usemap="#image-map">
     
 <map name="image-map">
     <area target="_blank" alt="빗썸" title="빗썸" href="https://www.youtube.com/embed/4j3kK-pksdE?si=yiZ5EIs-HPKIDSFt" coords="129,314,93" shape="circle">
