--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- 모바일 반응형을 위한 메타 태그 -->
-    <title>반응형 이미지맵 예제 (iframe 내부)</title>
+    <title>코인링크</title>
     <!-- jQuery 라이브러리 추가 (필수: rwdImageMaps.js 보다 먼저 와야 합니다) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 
     <!-- rwdImageMaps jQuery 플러그인 코드를 직접 붙여넣는 부분 -->
     <script>
-        // 여기에 태산9029님께서 복사해주신 rwdImageMaps.js 코드 내용을 그대로 붙여넣습니다.
         ;(function($) {
             $.fn.rwdImageMaps = function() {
                 var $img = this;
